force-app/main/default/objects/Case/fields/Channel_Source__c.field-meta.xml
<CustomField>
    <fullName>Channel_Source__c</fullName>
    <description>Channel that originated the case (Voice, Chat, Email, or Web).</description>
    <inlineHelpText>Origin channel of the case.</inlineHelpText>
    <label>Channel Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Voice</fullName>
                <default>true</default>
                <label>Voice</label>
            </value>
            <value>
                <fullName>Chat</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Web</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>