force-app/main/default/objects/Case/fields/Conversation_Summary__c.field-meta.xml
<CustomField>
    <fullName>Conversation_Summary__c</fullName>
    <description>Agentforce-generated summary of the voice/chat conversation associated with this case.</description>
    <inlineHelpText>Summary of what happened on the call.</inlineHelpText>
    <label>Conversation Summary</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>