force-app/main/default/objects/Case/fields/Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Country_Code__c</fullName>
    <description>Country market the case is logged against (AR or BR). Drives routing and language.</description>
    <inlineHelpText>AR or BR.</inlineHelpText>
    <label>Country Code</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AR</fullName>
                <default>true</default>
                <label>AR</label>
            </value>
            <value>
                <fullName>BR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>