force-app/main/default/objects/Case/fields/Detected_Intent__c.field-meta.xml
<CustomField>
    <fullName>Detected_Intent__c</fullName>
    <description>Primary intent detected by Agentforce on the conversation (e.g., warranty_lookup, kinto_quote).</description>
    <inlineHelpText>The intent classification produced by the agent.</inlineHelpText>
    <label>Detected Intent</label>
    <length>100</length>
    <type>Text</type>
</CustomField>