force-app/main/default/objects/Case/fields/Detected_Topics__c.field-meta.xml
<CustomField>
    <fullName>Detected_Topics__c</fullName>
    <description>List of topics / sub-intents detected during the call (line-delimited or JSON).</description>
    <inlineHelpText>Topics derived by the agent from the conversation.</inlineHelpText>
    <label>Detected Topics</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>