force-app/main/default/objects/Case/fields/Parts_Status__c.field-meta.xml
<CustomField>
    <fullName>Parts_Status__c</fullName>
    <description>Lifecycle of replacement parts associated with this case.</description>
    <inlineHelpText>NotApplicable, Awaiting, InTransit, Available, or Installed.</inlineHelpText>
    <label>Parts Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NotApplicable</fullName>
                <default>true</default>
                <label>Not Applicable</label>
            </value>
            <value>
                <fullName>Awaiting</fullName>
            </value>
            <value>
                <fullName>InTransit</fullName>
                <label>In Transit</label>
            </value>
            <value>
                <fullName>Available</fullName>
            </value>
            <value>
                <fullName>Installed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>