force-app/main/default/objects/Case/fields/Protocol_Number__c.field-meta.xml
<CustomField>
    <fullName>Protocol_Number__c</fullName>
    <description>External protocol number (TASA / TDB) for the case (e.g., "797-3"). Used for customer status lookups.</description>
    <externalId>true</externalId>
    <inlineHelpText>Protocol number provided by <Brand>.</inlineHelpText>
    <label>Protocol Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>